--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -310,10 +310,10 @@
         }
 
         var contador_sustancias = 0;
-        agregarSustancia(contador_contactos);
+        agregarSustancia(contador_sustancias);
         $('#agregar-sustancia').on('click', function () {
             contador_sustancias++;
-            agregarSustancia(contador_contactos);
+            agregarSustancia(contador_sustancias);
         });
 
         function agregarSustancia(index) {
