--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -91,7 +91,7 @@
                     <div class="tab-pane fade" id="nav-contactos" role="tabpanel" aria-labelledby="nav-contactos-tab">
                         <div id="contactos" class="container-fluid"></div>
                         <div class="col-12">
-                            <button class="btn btn-success" id="agregar-contacto">Agregar Otro Contacto</button>
+                            <button type="button" class="btn btn-success" id="agregar-contacto">Agregar Otro Contacto</button>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-riesgos-psicosociales" role="tabpanel" aria-labelledby="nav-riesgos-psicosociales-tab">
@@ -227,7 +227,7 @@
                     <div class="tab-pane fade" id="nav-psicotropicos" role="tabpanel" aria-labelledby="nav-psicotropicos-tab">
                         <div class="container" id="sustancias"></div>
                         <div class="col-12">
-                            <button class="btn btn-success" id="agregar-sustancia">Agregar Otro Psicotrópico</button>
+                            <button type="button" class="btn btn-success" id="agregar-sustancia">Agregar Otro Psicotrópico</button>
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                     <input type="text" class="form-control" name="otrostelefonoscontacto[]">\
                 </div>\
                 <div class="col-12" id="eliminar-btn' + index + '">\
-                    <button class="btn btn-danger" id="eliminar-contacto' + index + '" data-i="' + index + '">Eliminar Contacto</button>\
+                    <button type="button" class="btn btn-danger" id="eliminar-contacto' + index + '" data-i="' + index + '">Eliminar Contacto</button>\
                 </div>\
             </div>';
 
@@ -411,7 +411,7 @@
                     <input id="fechaultimoconsumo' + index + '" name="fechaultimoconsumo[]">\
                 </div>\
                 <div class="col-12" id="eliminar-sustancia-btn' + index + '">\
-                    <button class="btn btn-danger" id="eliminar-sustancia' + index + '" data-i="' + index + '">Eliminar Psicotrópico</button>\
+                    <button type="button" class="btn btn-danger" id="eliminar-sustancia' + index + '" data-i="' + index + '">Eliminar Psicotrópico</button>\
                 </div>\
             </div>\
             ';
