--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -318,7 +318,7 @@
 
         function agregarSustancia(index) {
             var formulario = '\
-            <div id="sustanciadiv' + index + '" class="row">\
+            <div id="sustanciadiv' + index + '" class="row border">\
                 <div class="form-group col-12">\
                     <label for="sustancia' + index + '">Sustancia</label>\
                     <select class="form-control" id="sustancia' + index + '" name="sustancia[]">\
