--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -339,6 +339,7 @@
                         <option>Otro</option>\
                     </select>\
                 </div>\
+                <div id="otrasustanciacontainer' + index + '" class="row"></div>\
                 <div class="form-group col-12 col-sm-4">\
                     <label for="añoprimeruso' + index + '">Año Del Primer Uso</label>\
                     <input type="number" class="form-control" id="añoprimeruso' + index + '" name="añoprimeruso[]">\
@@ -434,13 +435,13 @@
                 $('#sustancia' + index + ' option:selected').each(function() {
                     console.log($( this ).text());
                     if ($( this ).text() === 'Otro') {
-                        $('#sustancia' + index).append('\
+                        $('#otrasustanciacontainer' + index).append('\
                             <div id="otrasustanciadiv' + index + '" class="form-group col-12">\
                                 <label for="otrasustancia' + index + '">Otra Sustancia</label>\
                                 <input type="text" class="form-control" id="otrasustancia' + index + '" name="otrasustancia[]">\
                             </div>');
                     } else {
-                        $('otrasustanciadiv' + index).remove();
+                        $('#otrasustanciadiv' + index).remove();
                     }
                 });
             });
